# aerofly-igc-recorder

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
app/: __init__.py
app/config/: __init__.py  constants.py  gliders_module.py  settings.py
app/core/: __init__.py  bridge.py  flight.py  recorder.py
app/data/: __init__.py  models.py  parser.py
app/io/: __init__.py  files.py  igc.py  udp.py
app/ui/: __init__.py  cli.py  glider_tab.py  gui.py
app/utils/: __init__.py  events.py
tests/: README.md  conftest.py  test_flight.py  test_igc_writer.py.disabled  test_models.py  test_parser.py  test_settings.py
